@@ -2518,7 +2518,6 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
             break;
           indexes=AccessMutableIndexes(image);
 
-          q->opacity=OpaqueOpacity;
           if (storage_class == PseudoClass)
             {
               IndexPacket
@@ -2531,6 +2530,8 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
                     if (index < ping_info->num_trans)
                       q->opacity=
                         ScaleCharToQuantum(255-ping_info->trans_alpha[index]);
+		    else
+		      q->opacity=OpaqueOpacity;
                     q++;
                   }
               else if (ping_info->color_type == PNG_COLOR_TYPE_GRAY)
@@ -2542,6 +2543,8 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
                     q->blue=image->colormap[index].blue;
                     if (q->red == transparent_color.opacity)
                       q->opacity=TransparentOpacity;
+		    else
+		      q->opacity=OpaqueOpacity;
                     q++;
                   }
             }
@@ -2552,6 +2555,8 @@ static Image *ReadOnePNGImage(MngInfo *mng_info,
                     q->green == transparent_color.green &&
                     q->blue == transparent_color.blue)
                   q->opacity=TransparentOpacity;
+		else
+		  q->opacity=OpaqueOpacity;
                 q++;
               }
           if (!SyncImagePixels(image))
