@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-08-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/png.c (ReadOnePNGImage): Ensure that opacity channel is
+        properly initialized.  Resolves SourceForge issue 2831240
+        "Possible alpha channel issue with PNG w/palette and tRNS".
+
+</UL>
+<p>
 2009-08-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
